frontend/src/index.css
body {
  min-height: 100%;
  height: 100%;
  overflow-x: hidden;
}

.website {
  display: flex;
  height: 100%;
  min-height: 100vh;
  overflow-x: hidden;
}

.mb {
  margin-bottom: 40px;
}

.mB {
  margin-bottom: 80px;
}
  
.mt {
  margin-top: 40px;
}

.red {
  color: red
}

.form-button {
  background-color: #2F496E;
  color: #F4EADE;
  font-size: 25px;
  border: none;
  width: 200px;
  height: 40px;
  border-radius: 10px;
  margin: 10px;
}

.form-button-disabled {
  background-color: #9b9b9b;
  color: #F4EADE;
  font-size: 25px;
  border: none;
  width: 200px;
  height: 40px;
  border-radius: 10px;
  margin: 10px;
}


.small-buttons {
  border: none;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  background-color: #2F496E;
  color: #F4EADE;
  border-radius: 5px;
  cursor: pointer;
  height: 40px;
  width: 125px; 
}

.delete-button{
  border: none;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  background-color: rgb(253, 102, 102);
  color: blanchedalmond;
  border-radius: 10px;
  font-size: 25px;
  height: 40px;
  width: 150px;
}

